<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/expensesAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/enter_expenses"
        android:textSize="40sp"
        app:fontFamily="@font/roboto_thin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/expenseInput"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:textSize="30sp"
        android:hint="@string/expense"
        app:fontFamily="@font/roboto_thin"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/amountInput"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/peso_sign"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:fontFamily="@font/roboto_thin"
        app:layout_constraintBottom_toTopOf="@+id/enterExpense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expensesInstruction"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/addExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/add_expense"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        app:fontFamily="@font/roboto_thin"
         />

    <Button
        android:id="@+id/viewExpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_expenses"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        app:fontFamily="@font/roboto_thin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addExpense"
        app:layout_constraintVertical_bias="0.941" />
</LinearLayout>