<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="15dp"
        android:gravity="center"
        android:text="@string/to_start"
        android:textSize="40sp"
        app:fontFamily="@font/roboto_thin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/incomeInput"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="30sp"
        android:hint="@string/peso_sign"
        android:ems="10"
        android:inputType="number"
        app:fontFamily="@font/roboto_thin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/submitIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        app:fontFamily="@font/roboto_thin"
        app:layout_constraintBottom_toTopOf="@+id/buttonNextExpense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomeInput"
        app:layout_constraintVertical_bias="0.335" />

    <Button
        android:id="@+id/buttonNextExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:layout_marginVertical="50dp"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        app:fontFamily="@font/roboto_thin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>